Fix header issue with margin on mobile

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -99,7 +99,8 @@
   position: relative;
   font-size: 3rem;
   text-align: center;
-  margin: 20% 5rem 0;
+  padding-right: 5rem;
+  margin-top: 20%;
   z-index: 1;
 
   .title-1 {
@@ -118,6 +119,7 @@
   }
 
   @media screen and (max-width: 1200px) {
+    padding-right: 0;
     bottom: 2rem;
     font-size: 2.5rem;
   }
